<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ink"
    android:padding="24dp">

    <!-- Logo mark -->
    <FrameLayout
        android:id="@+id/logoMark"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@drawable/bg_logo_mark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/wordmark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.42">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/app_name" />
    </FrameLayout>

    <TextView
        android:id="@+id/wordmark"
        style="@style/TextHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/app_name"
        app:layout_constraintTop_toBottomOf="@id/logoMark"
        app:layout_constraintBottom_toTopOf="@id/tagline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tagline"
        style="@style/TextBodyMuted"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/splash_tagline"
        app:layout_constraintTop_toBottomOf="@id/wordmark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_button_primary"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/on_gold"
        android:elevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
